# vps_back

./: .env.exemple  .gitignore  Cargo.toml  README.md
migration/: README.md
migration/src/: lib.rs  m20250614_163005_create_sources_table.rs  m20251001_000000_create_stickers_table.rs  m20260218_000000_create_brew_downloads_table.rs
migrations/: 20250614163005_base_table.sql  20251001000000_stickers_table.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  pagination.rs  response.rs  source.rs  static_files.rs  sticker.rs
src/brew/: handlers.rs  mod.rs
src/entities/: brew_downloads.rs  mod.rs  prelude.rs  sources.rs  stickers.rs
src/github_stats/: fetcher.rs  handlers.rs  mod.rs  models.rs
src/middlewares/: auth.rs  mod.rs  tracing.rs
src/source/: handlers.rs  mod.rs  models.rs
src/stats/: handlers.rs  mod.rs
src/sticker/: handlers.rs  mod.rs  models.rs
