[package]
name = "vps-back"
version = "1.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.47", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4.1"
